# camcontrol

src/camcontrol/: .gitignore  README.md  flake.nix  pyproject.toml
src/camcontrol/camcontrol/: __main__.py  calibration.py  camera.py  cli.py  config.py  control.py  controller.py  dwell.py  geometry.py  gui.py  hotkey.py  intent.py  server.py  service.py  window.py
src/camcontrol/camcontrol/filtering/: one_euro.py
src/camcontrol/camcontrol/tracker/: base.py  mediapipe_tracker.py
src/camcontrol/tests/: test_calibration.py  test_cli.py  test_config.py  test_control.py  test_controller.py  test_dwell.py  test_geometry.py  test_get_dot.py  test_gui.py  test_hotkey.py  test_intent.py  test_sample.py  test_server.py  test_service.py  test_spawn.py  test_window.py
